@@ -1,3 +1,8 @@
+2008-04-10  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * src/ccm-screen.c:
+    * src/ccm-window.c: Ordering fixes
+
 2008-04-09  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-window.c: Set default type to NORMAL.
